--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -20,14 +20,14 @@ jobs:
       uses: mattnotmitt/doxygen-action@v1.1.0
       with:
         doxyfile-path: "./documents/kratos_doxyfile"
-        working-directory: "."
+        working-directory: "./documents"
         
     # Deploy the HTML documentation to GitHub Pages
     - name: Publish Doxygen documentation
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./doc/html/
+        publish_dir: ./documents/html/
         enable_jekyll: false
         allow_empty_commit: false
         force_orphan: true
