--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Build Doxygen documentation
       uses: mattnotmitt/doxygen-action@v1.1.0
       with:
-        doxyfile-path: "./documents/kratos_doxyfile"
+        doxyfile-path: "./kratos_doxyfile"
         working-directory: "./documents"
         
     # Deploy the HTML documentation to GitHub Pages
